--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metronome</title>
+    <title>TimeKeeper</title>
     <script type="text/javascript" src="./assets/js/metronome.js" defer></script>
     <script type="text/javascript" src="./assets/js/index.js" defer></script>
     <link rel="stylesheet" href="./assets/css/style.css">
